navbar-css-changed

--- a/frontend/src/Styles/Navbar.module.css
+++ b/frontend/src/Styles/Navbar.module.css
@@ -4,6 +4,9 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
     background-color: blue;
+    margin-bottom: 20px;
+    position: sticky;
+    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px,
+                rgba(0, 0, 0, 0.23) 0px 6px 6px;
 }
